--- a/src/app/pages/reports/scopus-report/scopus-report.component.html
+++ b/src/app/pages/reports/scopus-report/scopus-report.component.html
@@ -43,7 +43,7 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-5">
+            <div class="col-5" *ngIf="false">
               <div class="dropdown" placement="top" ngbDropdown>
                 <button class="btn btn-outline-success" type="button" ngbDropdownToggle>
                   {{yearDropdown.selected.key}}
