Cathedral report api call

--- a/src/app/pages/publications/publications.component.html
+++ b/src/app/pages/publications/publications.component.html
@@ -17,7 +17,7 @@
     <!--</div>-->
     <div class="row">
       <div class="col-lg-12">
-        <input type="button" class="btn btn-success" (click)="callBibtexModal()" value="Добавити Bibtex файл"/>
+        <select></select>
       </div>
     </div>
     <br>
