--- a/src/app/pages/reports/cathedral-report/cathedral-report.component.html
+++ b/src/app/pages/reports/cathedral-report/cathedral-report.component.html
@@ -1,3 +1,27 @@
-<p>
-  cathedral-report works!
-</p>
+<nb-card xmlns="http://www.w3.org/1999/html">
+  <nb-card-header>
+    Публікації
+  </nb-card-header>
+  <nb-card-body>
+    <div class="row">
+      <div class="col-lg-10">
+        <select class="form-control form-control-sm mini-select" (change)="onChange($event.target.value)">
+          <option *ngFor="let cathedra of getCathedras()" [value]="cathedra">
+            {{cathedra}}
+          </option>
+        </select>
+      </div>
+      <div class="col-lg-2">
+        <button class="btn btn-success btn-semin-round btn-demo" (click)="generatePdf()">
+          Зробити звіт
+        </button>
+      </div>
+    </div>
+    <br>
+    <div class="row">
+      <div class="col-lg-12">
+        <ng2-smart-table [settings]="settings" [source]="source"></ng2-smart-table>
+      </div>
+    </div>
+  </nb-card-body>
+</nb-card>
