--- a/src/app/pages/reports/cathedral-report/cathedral-report.component.html
+++ b/src/app/pages/reports/cathedral-report/cathedral-report.component.html
@@ -1,6 +1,6 @@
 <nb-card xmlns="http://www.w3.org/1999/html">
   <nb-card-header>
-    Публікації
+    Кафедральний звіт
   </nb-card-header>
   <nb-card-body>
     <div class="row">
