--- a/src/app/blocks/popups/modify-employee/modify-employee.component.html
+++ b/src/app/blocks/popups/modify-employee/modify-employee.component.html
@@ -404,7 +404,7 @@
   <div class="modal-footer">
     <button class="btn btn-sm btn-hero-success"
             [class.btn-pulse]="loading"
-            [disabled]="loading || modifyForm.pristine || !modifyForm.valid"
+            [disabled]="loading"
             type="submit">
       Зберегти
     </button>
